finally fixed the issue with the navbar overflowing on smartphones

--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -18,13 +18,13 @@
   .navbar-lewagon .navbar-collapse {
 
     a {
-      text-shadow: 0px 0px 6px rgba(0,0,0,0.7);
+      text-shadow: 0px 0px 50px rgba(0,0,0,0.7);
       color: #f4f4f4 !important;
     }
   }
 
   .login {
-    text-shadow: 0px 0px 6px rgba(0,0,0,0.7);
+    text-shadow: 0px 0px 50px rgba(0,0,0,0.7);
     color: #f4f4f4 !important;
   }
 
