--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -201,7 +201,7 @@
 }
 
 .homepage-btn {
-  text-shadow: 0px 0px 6px rgba(0,0,0,0.7);
+  text-shadow: 0px 0px 50px rgba(0,0,0,0.7);
   padding: 10px 25px;
   font-family: "Gravity-Bold";
   font-size: 24px;
