--- a/app/assets/stylesheets/components/_media-481px.scss
+++ b/app/assets/stylesheets/components/_media-481px.scss
@@ -50,6 +50,10 @@
 
   .navbar-lewagon {
 
+    .navbar-collapse {
+      overflow-x: scroll;
+    }
+
     .login {
       margin-right: 0;
       margin-left: 8px;
@@ -101,7 +105,6 @@
     h3 {
       text-align: center;
       font-size: 18px;
-      text-shadow: 0px 0px 6px rgba(0,0,0,0.7) !important;
     }
   }
 
