--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,7 +24,6 @@
     margin-right: 50px;
     font-family: "Novar";
     color: black;
-    font-weight: bold;
   }
 
   a:hover, a:active, a:visited {
